[BUGFIX] Make sure the page title does not wrap automatically

--- a/Resources/Public/Contrib/Bootstrap/less/navbar.less
+++ b/Resources/Public/Contrib/Bootstrap/less/navbar.less
@@ -163,6 +163,7 @@
   font-size: @font-size-large;
   line-height: @line-height-computed;
   height: @navbar-height;
+  white-space: nowrap;
 
   &:hover,
   &:focus {
